# hypurr-erc20

./: .gitignore  README.md  brownie-config.yaml  pyproject.toml
.brownie/: network-config.yaml
contracts/interfaces/: HLOracle.sol  IERC1046.sol
contracts/libraries/: HLERC20.sol
hyperliquid/: info.py
scripts/: deploy.py  token.py
